@@ -28,6 +28,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
  - amend spatial_filter check to take a directory name to search instead
     of an explicit list of input files (that approach became unworkable
     with highly plexed lanes)
+ - add result_file_path attribute to file-based result objects
 
 release 65.4.1
  - store value of output_dir from the RNA-SeQC check into the database
